--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,7 @@ h1{
 .icon{
     color: darkgreen;
     display: block;
+    margin-bottom: 10px;
 }
 #register label span.error{
     display: none;
@@ -32,4 +33,12 @@ h1{
 input[type=radio][type=checkbox] {
     margin-bottom: 20px;
     font-size: 15px;
+}
+button{
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    margin-left: 10px;
+    font-size: 32px;
+    width: 300px;
 }
