--- a/css/base.css
+++ b/css/base.css
@@ -5,6 +5,8 @@
     margin: auto;
     margin-top: 65px;
     border-radius: 9px;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .input{
@@ -18,6 +20,21 @@
     border-radius: 20px;
     box-sizing: border-box;
     width: 100%;
+    margin-top: 10px;
+}
+
+input[type=date]{
+    color: #3c3c3c;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 20px;
+    background-color: #fbfbfb;
+    padding: 13px 13px 13px 54px;
+    margin-bottom: 10px;
+    border-radius: 20px;
+    box-sizing: border-box;
+    width: 100%;
+    margin-top: 10px;
 }
 
 .input:focus{
@@ -37,5 +54,9 @@ input.error, textarea.error{
     margin-bottom: 10px;
     border-radius: 20px;
     box-sizing: border-box;
+    width: 100%;
+}
+.enviar{
+    text-align: center;
     width: 100%;
 }
