--- a/css/base.css
+++ b/css/base.css
@@ -44,7 +44,7 @@ input[type=date]{
     padding: 13px 13px 13px 54px;
 }
 
-input.error, textarea.error{
+input.error{
     color: #3c3c3c;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
